--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "mocha --compilers coffee:coffee-script/register ./test/test.coffee -R spec",
     "compile": "coffee -o ./lib -cb ./src",
-    "build": "browserify -s waterhouse -o ./dist/index.js ./src/index.coffee",
-    "watch": "watchify -s waterhouse -o ./dist/index.js ./src/index.coffee"
+    "build": "browserify -s waterhouse -o ./test/browser.js ./src/index.coffee",
+    "watch": "watchify -s waterhouse -o ./test/browser.js ./src/index.coffee"
   },
   "author": "",
   "license": "MIT",
