--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "mocha --compilers coffee:coffee-script/register ./test/test.coffee -R spec",
-    "compile": "coffee -o ./lib -cb ./src",
-    "build": "browserify -s waterhouse -o ./test/browser.js ./index.js",
-    "watch": "watchify -s waterhouse -o ./test/browser.js ./index.js"
+    "test": "mocha ./test/test.js -R spec",
+    "build": "npm run build-lib; npm run build-test",
+    "watch": "watchify -s waterhouse -o ./test/browser.js ./index.js",
+    "build-lib": "browserify -s waterhouse -o ./test/browser.js ./index.js",
+    "build-test": "browserify -s waterhouse -o ./test/browser-test.js ./test/test.js"
   },
   "author": "",
   "license": "MIT",
