--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,20 @@
 {
   "name": "waterhouse",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "homepage": "https://github.com/nickb1080/waterhouse",
   "authors": [
     "Nick Bottomley <nhbottomley@gmail.com>"
   ],
+  "main": "dist/waterhouse.js",
   "moduleType": [
-    "node"
+    "node",
+    "globals"
   ],
   "keywords": [
-    "function",
-    "decorator",
+    "functional",
+    "curry",
+    "partial",
+    "arity",
     "extensible"
   ],
   "license": "MIT",
